Refatorado filtro de buscar usuarios